2008-06-11  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: get rid of gamin check. no longer depend on that
	directly.

2008-06-10  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-restart.c (main): Fix a typo. (RHBZ#450574)

2008-06-06  Akira TAGOH  <tagoh@redhat.com>

	* imsettings.pc.in (Requires): Add gio-2.0.

2008-06-04  Akira TAGOH  <tagoh@redhat.com>

	* data/xim.in.in: get rid of shebang.

	* imsettings/imsettings-request.c (imsettings_request_get_im_list)
	(imsettings_request_get_current_user_im)
	(imsettings_request_get_current_system_im)
	(imsettings_request_get_xinput_filename)
	(imsettings_request_get_im_module_name)
	(imsettings_request_get_xim_program)
	(imsettings_request_get_preferences_program)
	(imsettings_request_get_auxiliary_program)
	(imsettings_request_get_short_description)
	(imsettings_request_get_long_description)
	(imsettings_request_is_system_default)
	(imsettings_request_is_user_default, imsettings_request_is_xim)
	(imsettings_request_get_supported_language)
	(imsettings_request_start_im, imsettings_request_stop_im)
	(imsettings_request_what_im_is_running)
	(imsettings_request_change_to): Allow invoking without giving GError.

2008-06-03  Akira TAGOH  <tagoh@redhat.com>

	* data/xinputinfo.sh.in: Add ICON support.

	* tests/gcit_5.c (setup): Fix a typo.

	* tests/imsettings-info.c (test_imsettings_info_get_icon_file):
	New testcase.

	* README: Add a description for ICON option.

	* imsettings/imsettings-info.c (imsettings_info_notify_properties):
	Add ICON support.
	(imsettings_info_get_icon_file): new function.

	* src/factory_info.c (imsettings_info_manager_validate_from_file_info):
	New function to check if the file got changed is valid to deal with.
	(imsettings_info_manager_validate_from_file): likewise.
	(imsettings_info_manager_real_changed_xinputd): don't try to add
	the information if it's not a valid file.
	(imsettings_info_manager_real_changed_dot_xinputrc): likewise.