@@ -4,5 +4,6 @@ NULL =
 EXTRA_DIST =			\
 	test-scim.conf		\
 	test-scim2.conf		\
+	test-issue7.conf	\
 	xim.conf		\
 	$(NULL)
