@@ -1,0 +1,12 @@
+GTK_IM_MODULE=scim-bridge
+QT_IM_MODULE=xim
+XIM=SCIM
+IMSETTINGS_IGNORE_ME=true
+XIM_PROGRAM=/usr/bin/scim
+XIM_ARGS="-d --no-socket"
+PREFERENCE_PROGRAM=/usr/bin/scim-setup
+PREFERENCE_ARGS="--display :0"
+AUXILIARY_PROGRAM=/bin/true
+AUXILIARY_ARGS="--version"
+SHORT_DESC="S C I M"
+LONG_DESC="Smart Common Input Method platform"
